package use_case.PlayerGuess;public class PlayerGuessInputData {
}
