package use_case.PlayerGuess;public interface PlayerGuessOutputBoundary {
}
